[tool.poetry]
name = "Pielgrzym - oficjalny bot muzyczny serwera Wysławiajcie Pana!"
version = "1.0.0"
description = ""
authors = ["Quanosek#5930"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
